--- a/index.html
+++ b/index.html
@@ -9,13 +9,59 @@
   <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body>
+  <div class="tracking-dashboard">
+    
+    <div class="report-profile">
 
-  Report for
-  Jeremy Robson
+      <div class="profile-wrapper">
 
-  Daily
-  Weekly
-  Monthly
+        <div class="report-image">
+          <img src="./assets/images/image-jeremy.png" alt="Profile Picture">
+        </div>
+
+        <div class="report-profile-info">
+          <h3>Report for</h3>
+          <h2>Jeremy Robson</h2>
+        </div>
+
+      </div>
+
+      <div class="profile-selection">
+        <div class="daily">Daily</div>
+        <div class="weekly">Weekly</div>
+        <div class="monthly">Monthly</div>
+      </div>
+
+    </div>
+
+    <div class="work-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+
+    <div class="play-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+    <div class="study-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+    <div class="exercise-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+    <div class="social-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+    <div class="self-care-content">
+      <h3>Lorem Ipsum</h3>
+      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ridiculus sit nisibero sapien integer magnis ligula lobortis quam ut.</p>
+    </div>
+
+
+  </div>
 
   Work
   5hrs <!-- daily -->
